<resources>
    <string name="app_name">Slackforce</string>
    <string name="title_section1">measure\nForce</string>
    <string name="title_section2">static\nCalculations</string>
    <string name="title_section3">dynamic\nCalculations</string>
    <string name="main_activity__option_about">About</string>
    <string name="main_activity__option_help">Help</string>
    <string name="option_about__source_code_at">Source Code and Support at:</string>
    <string name="option_about__github_address">https://github.com/namlit/Slackforce</string>
    <string name="option_about__post_on_github">Please post bug reports and feature requests at the github page.</string>
    <string name="documentation">Documentation</string>
    <string name="documentation_text">For a documentation on the theoretical background have a look at the linked
        &lt;a href="https://github.com/namlit/SlackforceDocumentation/raw/master/slackforceDocumentationSmartphone.pdf">PDF&lt;/a>

        &lt;h1>Measure Force&lt;/h1>
        &lt;p>The idea is to calculate the tension of the line from the rhythmical sound you get when slapping the line with your finger.
        To measure the tension you have to do the following steps:&lt;/p>
        &lt;p>1. Enter the correct webbing and Length of the line &lt;/p>
        &lt;p>2. Press the start measurement button&lt;/p>
        &lt;p>3. Hold the microphon of you phone close to the line&lt;/p>
        &lt;p>4. Slap the end of the line with your finger to get the rhythmical sound&lt;/p>
        &lt;p>5. Wait for the measurement to finish&lt;/p>
        &lt;p> If the automatic measurement does not work you can switch to manual mode and type the rhythm on a button. &lt;/p>

        &lt;h1> Static Calculations &lt;/h1>
        &lt;p> In the static calculations section the relation between length, sag, force and weight can be calculated
        at static conditions with a slackliner standing in the middle of the line&lt;/p>

        &lt;h1> Dynamic Calculations &lt;/h1>
        &lt;p> To calculate the forces involved in bouncing and jumping in the middle of a slackline a dynamic simulation
        of the slackline\'s movement is done. This section is highly experimentive yet and the results have not been verified. &lt;/p>

        &lt;p> To get more information on the particular parameters you can click on the parameter names in each section.&lt;/p>
    </string>
    <string name="title_activity_select_webbing_manufacturer_action">Select Manufacturer</string>
    <string name="title_activity_select_webbing">Select Webbing</string>
    <string name="title_activity_choose_result_parameter">Choose Parameter to calculate</string>
    <string name="general_preference_key">GENERAL_PREFERENCE_KEY</string>
    <string name="measure_force_preference_key">MEASURE_FORCE_PREFERENCE_KEY</string>
    <string name="calculate_force_preference_key">CALCULATE_FORCE_PREFERENCE_KEY</string>
    <string name="dynamic_force_preference_key">DYNAMMIC_FORCE_PREFERENCE_KEY</string>
    <string name="preference_is_show_initial_warning">PREFERENCE_IS_SHOW_INITIAL_WARNING</string>
    <string name="preference_webbing_name">PREFERENCE_WEBBING_NAME</string>
    <string name="preference_stretch_coefficient">PREFERENCE_STRETCH_COEFFICIENT</string>
    <string name="preference_weight_per_meter">PREFERENCE_WEIGHT_PER_METER</string>
    <string name="preference_line_length">PREFERENCE_LINE_LENGTH</string>
    <string name="preference_is_automatic_measurement">PREFERENCE_IS_AUTOMATIC_MEASUREMENT</string>
    <string name="preference_line_sag">PREFERENCE_LINE_SAG</string>
    <string name="preference_weight_of_slackliner">PREFERENCE_WEIGHT_OF_SLACKLINER</string>
    <string name="preference_anchor_force">PREFERENCE_ANCHOR_FORCE</string>
    <string name="preference_pretension">PREFERENCE_PRETENSION</string>
    <string name="preference_sag_without_slackliner">PREFERENCE_WEBBING_NAMESAG_WITHOUT_SLACKLINER</string>
    <string name="preference_height_of_fall">PREFERENCE_HEIGHT_OF_FALL</string>
    <string name="preference_parameter_to_calculate">PARAMETER_TO_CALCULATE</string>
    <string name="do_not_show_again">Do not show again</string>
    <string name="ok">Ok</string>
    <string name="cancel">cancel</string>
    <string name="abort">abort</string>
    <string name="back">back</string>
    <string name="stop">stop</string>
    <string name="custom">Custom</string>
    <string name="copy_values">Copy Values</string>
    <string name="webbing">Webbing:</string>
    <string name="stretch_with_unit">Stretch [%/10kN]:</string>
    <string name="line_weight_with_unit">Line Weight [g/m]:</string>
    <string name="length_with_unit">Length [m]:</string>
    <string name="length">Length</string>
    <string name="sag_with_unit">Sag [m]:</string>
    <string name="sag">Sag</string>
    <string name="slackliner_weight_with_unit">Weight [kg]:</string>
    <string name="weight">Weight</string>
    <string name="anchor_force_with_unit">Force [kN]:</string>
    <string name="force">Force</string>
    <string name="pretension_with_unit">Pretension [kN]:</string>
    <string name="initialSag_with_unit">Initial Sag [m]:</string>
    <string name="height_of_bounce_with_unit">Bounce Height [m]:</string>
    <string name="g_factor">g-factor:</string>
    <string name="max_slacker_force">Slacker Force:</string>
    <string name="max_line_force">max. Line Force:</string>
    <string name="max_sag">max. Sag:</string>
    <string name="automatic">automatic</string>
    <string name="manual">manual</string>
    <string name="start_measuring">START MEASURING</string>
    <string name="abort_measuring">ABORT MEASURING</string>
    <string name="measure_again">MEASURE AGAIN</string>
    <string name="the_pretension_is">The Pretension is</string>
    <string name="the_measured_time_of_oscillation_is">The measured time of oscillation is</string>
    <string name="main_activity__initial_warning_text">This App is still under early development. Do not trust the calculated values. The creator of the App is not responsible of any harm resulting from the use of the calculated values.</string>
    <string name="measure_force__general_info_title">Measure Force</string>
    <string name="measure_force__general_info_text">If you slap the Line an acoustic wave is propagating along the line and reflected multiple times. The propagation speed is dependent on the force of the line. Therefore it is possible to calculate the pretension of the line from the frequency of the sound with the following formula: <h1>4*m*l^2</h1> / t^2 \n\nm is the 	mass per unit length, l is the length of the line and t the time between the sounds. For more information on the parameters click on the name of the parameter</string>
    <string name="measure_force__info_title_webbing">Webbing</string>
    <string name="measure_force__info_text_webbing">If you specify a specific Webbing the stretch and weight of the Line get filled automatically. If you can not find your Webbing, you can just enter those values manually.</string>
    <string name="measure_force__info_title_stretch">Stretch of the Line</string>
    <string name="measure_force__info_text_stretch">For the pretension measurement the stretch is only used to calculate the decrease of the weight per meter of the webbing due to the stretch of the Line. This should only be relevant on Lines with a very high stretch. The stretch is assumed to be linear here.</string>
    <string name="measure_force__info_title_line_weight">Weight of the Line</string>
    <string name="measure_force__info_text_line_weigth">The propagation speed of a wave on a tensioned Line is dependent on the weight per unit length of the Line. Therefore it is important put the right value here. </string>
    <string name="measure_force__info_title_length">Length of the Line</string>
    <string name="measure_force__info_text_length">The Length of the line between the two line lockers.</string>
    <string name="measure_force_automatically__status_text_start_measurement">Press the start button to start the automatic measurement. Then hold the microphone of your phone next to the line and slap the line with your finger. Wait until the measurement is finished.</string>
    <string name="measure_force_automatically__status_text_measuring">measuring...\nThe measurement will stop automatically when the time of oscillation got recognized. If you get no result you can slap the line again. </string>
    <string name="measure_force_manual__description_text">Slap the Line, listen to the sound and type the rhythm on the button below</string>
    <string name="show_measurement_result__result_text">The Pretension is %.2f kN</string>
    <string name="show_measurement_result__time_Of_Oscillation">The measured time of oscillation is %.3f s</string>
    <string name="calculate_force__general_info_title">Calculate static Forces</string>
    <string name="calculate_force__general_info_text">The calculation of the static forces is based on the formula F = sqrt(sag^2 + length^2/4) * m*g / (2 * sag). m is the weight of the slackliner and g the gravity acceleration. If the stretch behavior of the line is known, it is also possible to calculate the pretension of the line from the force. For Rodeo lines the initial sag without a slackliner on the line gets calculated. You can change any parameter and get ask automatically which parameter you want to calculate. For further information on the parameters you can click on the parameter names.</string>
    <string name="calculate_force__info_title_webbing">Webbing</string>
    <string name="calculate_force__info_text_webbing">If you select a webbing here the stretch gets filled automatically. If you do not find your webbing you can just type the stretch yourself</string>
    <string name="calculate_force__info_title_stretch">Stretch of the line</string>
    <string name="calculate_force__info_text_stretch">The stretch of the line is needed to calculate the pretension and for rodeo lines the initial sag without a slacker of the line. If you change the stretch manually it is assumed to be linear. If you select a Webbing a custom stretch curve is used if available.</string>
    <string name="calculate_force__info_title_length">Length</string>
    <string name="calculate_force__info_text_length">The Length of the line in meters</string>
    <string name="calculate_force__info_title_sag">Sag of the Line</string>
    <string name="calculate_force__info_text_sag">The sag of the line if a slackliner is standing in the middle of the line</string>
    <string name="calculate_force__info_title_weight">Weight of Slackliner</string>
    <string name="calculate_force__info_text_weight">The weight of the slackliner who is standing on the line</string>
    <string name="calculate_force__info_title_force">Anchor Force</string>
    <string name="calculate_force__info_text_force">The force that appears at the anchor point when a slackliner is standing in the middle of the line</string>
    <string name="calculate_force__info_title_pretension">Pretension</string>
    <string name="calculate_force__info_text_pretension">The pretension of the line without a slackliner on the line</string>
    <string name="calculate_force__info_title_initial_sag">Sag without Slackliner</string>
    <string name="calculate_force__info_text_initial_sag">The initial sag of a rodeo line, if no slackliner is standing on the line. If the initial sag is greater than zero the pretension of the line has to be zero. For lines with a pretension greater than zero this parameter is always zero.</string>
    <string name="dynamic_force__general_info_title">Dynamic Forces</string>
</resources>