<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="namlit.slackforce.CalcForceFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    style="@style/ParameterNameStyle"
                    android:text="@string/webbing"
                    android:id="@+id/webbingText" />

                <Button
                    style="@style/WebbingButtonStyle"
                    android:id="@+id/webbing" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    style="@style/ParameterNameStyle"
                    android:text="@string/stretch_with_unit"
                    android:id="@+id/stretchText" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/stretch"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    style="@style/ParameterNameStyle"
                    android:text="@string/length_with_unit"
                    android:id="@+id/lengthText" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/length" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    style="@style/ParameterNameStyle"
                    android:text="@string/sag_with_unit"
                    android:id="@+id/sagText" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/sag" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    style="@style/ParameterNameStyle"
                    android:text="@string/slackliner_weight_with_unit"
                    android:id="@+id/weightText" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/weight" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    style="@style/ParameterNameStyle"
                    android:text="@string/anchor_force_with_unit"
                    android:id="@+id/forceText" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/force" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    style="@style/ParameterNameStyle"
                    android:text="@string/pretension_with_unit"
                    android:id="@+id/pretensionText" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/pretension" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    style="@style/ParameterNameStyle"
                    android:text="@string/initialSag_with_unit"
                    android:id="@+id/sagWithoutSlackerText" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/sagWithoutSlacker" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/copy_values"
                    android:id="@+id/copyValuesButton"
                    android:layout_gravity="center"
                    android:layout_column="0"
                    android:background="@android:drawable/btn_default"
                    android:layout_span="2"
                    android:layout_marginTop="10dp" />
            </TableRow>

        </TableLayout>
    </ScrollView>

</FrameLayout>
